Add full SG3 prompt context for split-plot Problem 6

--- a/SG3_study_dashboard.html
+++ b/SG3_study_dashboard.html
@@ -519,7 +519,10 @@ MSE = 1.73
 <div class="answer">
   <div class="panel">
     <h4>Full Prompt (SG3)</h4>
-    <p>(Split-plot ANOVA problem; prompts and outputs provided in SG3.)</p>
+    <p>We are looking at subjects’ ability to recall characters in a string based on:</p>
+    <p>1) Type of string (digits / letters / mixed) — within-subject factor</p>
+    <p>2) Type of brain damage (left / right / control) — between-subject factor</p>
+    <p>This is a 3×3 split-plot design; n = 18. Assumptions checked: equality of variances and equality of covariance/variance matrices.</p>
   </div>
   <p><strong>Skills tested:</strong> <a href="#obj3">Compute fixed effects</a>, <a href="#obj4">Error terms</a>, <a href="#obj10">Contrasts</a>, <a href="#obj11">Post-hoc</a></p>
 
