--- a/SG3_study_dashboard.html
+++ b/SG3_study_dashboard.html
@@ -316,7 +316,7 @@ MSE = 1.73
     <div class="answer">
       <div class="panel"><h4>Prompt</h4><p>Interpret the omnibus F-statistics in this table.</p></div>
       <p>The interaction of treatment and political orientation is highly significant, F(2,54)=16.72, p&lt;.001. This means the effect of officer race depends on political orientation.</p>
-      <p>The treatment main effect is marginal, F(1,54)=4.01, p=.05. The orientation main effect is not significant, F(2,54)=2.00, p=.15. These main effects are not reliable once the interaction is accounted for.</p>
+      <p>The treatment main effect is right at the α=.05 threshold, F(1,54)=4.01, p=.05. The orientation main effect is not significant, F(2,54)=2.00, p=.15. These main effects are not reliable once the interaction is accounted for.</p>
     </div>
   </details>
 
@@ -373,7 +373,7 @@ MSE = 1.73
       <div class="panel"><h4>Prompt</h4><p>H<sub>0</sub>: 1·μ<sub>conservative,white</sub> + −1·μ<sub>conservative,black</sub> = 0</p></div>
       <p>Type: simple effect of officer race within conservatives (pairwise).</p>
       <p>ψ̂ = 4.62 − 1.25 = 3.37. Standard error = √(1.73·(1/10 + 1/10)).</p>
-      <p>t = 5.73. Tukey critical value t* = 2.471. Because 5.73 &gt; 2.471, reject the null hypothesis.</p>
+      <p>t = 5.73. Tukey critical value t* = 2.471 (uses α/3 here because we could test the treatment simple effect separately for liberals, moderates, and conservatives and we want familywise control). Because 5.73 &gt; 2.471, reject the null hypothesis.</p>
       <p>Interpretation: conservatives rate double‑jeopardy higher for white officers by about 3.37 points.</p>
     </div>
   </details>
@@ -430,8 +430,10 @@ MSE = 1.73
     <summary>Problem 3b — For each contrast: null, adjusted t*, significance</summary>
     <div class="answer">
       <div class="panel"><h4>Prompt</h4><p>For each contrast, write the null hypothesis, the equation for the post-hoc-adjusted t critical value, find the adjusted t-critical value, and determine significance.</p></div>
-      <p>Contrast 1: H<sub>0</sub>: μ<sub>black</sub> − μ<sub>hispanic</sub> = 0. Tukey critical value t* = 2.355. Observed t = 6.979, so reject.</p>
-      <p>Contrast 2: H<sub>0</sub>: −μ<sub>black</sub> − μ<sub>hispanic</sub> + 2μ<sub>white</sub> = 0. Scheffé critical value t* = 2.460. Observed t = 11.372, so reject.</p>
+      <p>Contrast 1 (c = [1, −1, 0]): H<sub>0</sub>: 1·μ<sub>black</sub> + (−1)·μ<sub>hispanic</sub> + 0·μ<sub>white</sub> = 0.</p>
+      <p>Adjusted critical value (match SG3): <span class="formula">t* = q / √2</span> (Tukey), here <strong>t* ≈ 2.47</strong>. Observed t = 6.979 → reject.</p>
+      <p>Contrast 2 (c = [−1, −1, 2]): H<sub>0</sub>: (−1)·μ<sub>black</sub> + (−1)·μ<sub>hispanic</sub> + 2·μ<sub>white</sub> = 0.</p>
+      <p>Adjusted critical value (match SG3): <span class="formula">t* = q / √2</span> (Tukey), here <strong>t* ≈ 2.47</strong>. Observed t = 11.372 → reject.</p>
     </div>
   </details>
 </div>
@@ -477,7 +479,8 @@ MSE = 1.73
 <div class="answer">
   <div class="panel">
     <h4>Full Prompt (SG3)</h4>
-    <p>726 White Americans rate 5 racial groups on 6 negative traits (1–7). This is a repeated-measures-style factorial structure (group × trait).</p>
+    <p>In 2000, researchers surveyed 726 non-Hispanic, non-Jewish White Americans and asked them to rate Asians, Blacks, Hispanics, Jews, and Whites on a variety of negative traits, from 1 (most positive) to 7 (most negative).</p>
+    <p><strong>Traits (SG3):</strong> Anti-family, Unfairness, Lazy, Unintelligent, Violent, Poor.</p>
   </div>
   <p><strong>Skills tested:</strong> <a href="#obj4">Error terms / sources of error</a>, <a href="#obj3">Compute fixed effects</a>, <a href="#obj10">Contrasts</a>, <a href="#obj11">Post-hoc</a></p>
 
@@ -485,9 +488,17 @@ MSE = 1.73
     <summary>Problem 5a — Fill in ANOVA table (sources of SS / error terms)</summary>
     <div class="answer">
       <div class="panel"><h4>Prompt</h4><p>Fill in the ANOVA table given the sums of squares.</p></div>
-      <p>Group: sum of squares 3494, degrees of freedom 4, mean square 873.5, F = 459.7 (error mean square 1.9).</p>
-      <p>Trait: sum of squares 1510, degrees of freedom 5, mean square 302.0, F = 120.8 (error mean square 2.5).</p>
-      <p>Group × Trait: sum of squares 955, degrees of freedom 20, mean square 47.8, F = 68.3 (error mean square 0.7).</p>
+      <p><strong>Given SS (from SG3 prompt):</strong> Group=3494; Trait=1510; Subject=5169; Group×Trait=955; Group×Subject=5641; Trait×Subject=9063; Group×Trait×Subject=9444.</p>
+
+      <table class="tbl">
+        <tr><th>Source</th><th>SS</th><th>df</th><th>MS</th><th>F</th></tr>
+        <tr><td>Racial group</td><td>3494</td><td>4</td><td>873.5</td><td>459.7</td></tr>
+        <tr><td>Error (group×subject)</td><td>5641</td><td>725*4 = 2900</td><td>1.9</td><td>N/A</td></tr>
+        <tr><td>Trait</td><td>1510</td><td>5</td><td>302.0</td><td>120.8</td></tr>
+        <tr><td>Error (trait×subject)</td><td>9063</td><td>725*5 = 3625</td><td>2.5</td><td>N/A</td></tr>
+        <tr><td>Group×Trait</td><td>955</td><td>20</td><td>47.8</td><td>68.3</td></tr>
+        <tr><td>Error (group×trait×subject)</td><td>9444</td><td>725*20 = 14500</td><td>0.7</td><td>N/A</td></tr>
+      </table>
     </div>
   </details>
 
@@ -504,11 +515,11 @@ MSE = 1.73
     <summary>Problem 5c — Interpret contrasts; Tukey vs Scheffé</summary>
     <div class="answer">
       <div class="panel"><h4>Prompt</h4><p>Interpret these contrasts. Explain what they test and assess significance using the appropriate Tukey or Scheffé adjustment.</p></div>
-      <p>C1 Asian vs Jew: Tukey t* = 2.729, t = 10.204 → reject.</p>
-      <p>C2 Unfairness vs Antifamily: Tukey t* = 2.851, t = 14.826 → reject.</p>
-      <p>C3 Asian vs Jew within Unfairness: Tukey t* = 3.312, t = 4.030 → reject.</p>
-      <p>C4 Asian vs Jew within Antifamily: Tukey t* = 3.312, t = 12.088 → reject.</p>
-      <p>C5 Interaction contrast: Scheffé t* = 5.606, t = 0.116 → retain.</p>
+      <p><strong>C1 (main effect of group; pairwise):</strong> Asian vs Jew. H<sub>0</sub>: 0·μ<sub>black</sub> + 1·μ<sub>asian</sub> + 0·μ<sub>hispanic</sub> + (−1)·μ<sub>jew</sub> + 0·μ<sub>white</sub> = 0. Tukey t* = <strong>2.7347</strong>, t = 10.204 → reject.</p>
+      <p><strong>C2 (main effect of trait; pairwise):</strong> Unfairness vs Antifamily. H<sub>0</sub>: 1·μ<sub>unfairness</sub> + (−1)·μ<sub>antifamily</sub> = 0. Tukey t* = <strong>2.8573</strong>, t = 14.826 → reject.</p>
+      <p><strong>C3 (simple effect of group within Unfairness; pairwise):</strong> Asian vs Jew (Unfairness). Tukey t* = <strong>3.3214</strong>, t = 4.030 → reject.</p>
+      <p><strong>C4 (simple effect of group within Antifamily; pairwise):</strong> Asian vs Jew (Antifamily). Tukey t* = <strong>3.3214</strong>, t = 12.088 → reject.</p>
+      <p><strong>C5 (interaction contrast; complex; Scheffé):</strong> Difference between the Asian–Jew gap in Unfairness vs in Antifamily. Scheffé t* = <strong>5.6305</strong>, t = 0.116 → retain.</p>
     </div>
   </details>
 </div>
@@ -529,6 +540,7 @@ MSE = 1.73
   <details id="p6a">
     <summary>Problem 6a — Calculate fixed effects</summary>
     <div class="answer">
+      <div class="panel"><h4>Prompt</h4><p>Calculate the effects of “right brain”, “mixed”, and “right brain–mixed”. The grand mean across all subjects and observations is 7.48 characters.</p></div>
       <p>α<sub>right</sub> = 7.61 − 7.48 = +0.13. β<sub>mixed</sub> = 7.11 − 7.48 = −0.37.</p>
       <p>(αβ)<sub>right,mixed</sub> = 7.17 − 7.61 − 7.11 + 7.48 = −0.07.</p>
     </div>
@@ -537,17 +549,27 @@ MSE = 1.73
   <details id="p6b">
     <summary>Problem 6b — Fill in ANOVA table entries</summary>
     <div class="answer">
-      <p>Damage: mean square 28.50, F = 23.8 (error mean square 1.20).</p>
-      <p>Stimuli: mean square 4.50, F = 4.4 (error mean square 1.02).</p>
-      <p>Damage × Stimuli: mean square 0.50, F = 0.5 (error mean square 1.02).</p>
+      <div class="panel"><h4>Prompt</h4><p>Fill in this ANOVA table. Given SS: Damage=57; Stimuli=9; Subject=17.4; Damage×Stimuli=2; Subject×Stimuli=30.6.</p></div>
+
+      <table class="tbl">
+        <tr><th>Source</th><th>SS</th><th>df</th><th>MS</th><th>F</th></tr>
+        <tr><td>Damage group</td><td>57.0</td><td>2</td><td>28.50</td><td>23.8</td></tr>
+        <tr><td>Error</td><td>17.4</td><td>15</td><td>1.20</td><td>N/A</td></tr>
+        <tr><td>Stimuli</td><td>9.0</td><td>2</td><td>4.50</td><td>4.4</td></tr>
+        <tr><td>Error</td><td>30.6</td><td>30</td><td>1.02</td><td>N/A</td></tr>
+        <tr><td>Damage×Stimuli</td><td>2.0</td><td>4</td><td>0.50</td><td>0.5</td></tr>
+        <tr><td>Error</td><td>30.6</td><td>30</td><td>1.02</td><td>N/A</td></tr>
+      </table>
     </div>
   </details>
 
   <details id="p6c">
     <summary>Problem 6c — Main/simple/interaction contrasts + decisions</summary>
     <div class="answer">
-      <p>1) Damage main effect: ψ̂=3.94, t=6.335, Scheffé t*=2.714 → reject. Left damage worse than right+control.</p>
-      <p>2) Stimuli main effect: ψ̂=0.944, t=3.034, Scheffé t*=2.714 → reject. Digits recalled better than mixed.</p>
+      <div class="panel"><h4>Prompt</h4><p>For each contrast: (a) identify the type; (b) write the null hypothesis; (c) calculate the posthoc-adjusted critical value; and (d) interpret directionality. (Use Tukey for pairwise; Scheffé for complex.)</p></div>
+
+      <p>1) Damage main effect (between-subject; complex): ψ̂=3.94, t=6.335, Scheffé t*=2.714 → reject. Left damage worse than right+control.</p>
+      <p>2) Stimuli main effect (within-subject; pairwise): contrast c = [1, 0, −1] (digits − mixed). ψ̂=0.944, t=3.034, Scheffé t*=2.714 → reject. Digits recalled better than mixed.</p>
       <p>3) Simple effect (digits): ψ̂=3.167, t=3.424, Scheffé t*=3.300 → reject.</p>
       <p>4) Simple effect (mixed): ψ̂=3.833, t=3.601, Scheffé t*=3.300 → reject.</p>
       <p>5) Interaction contrast: ψ̂=−0.667, t=−0.505, Scheffé t*=3.496 → retain.</p>
